<resources>
    <string name="app_name">大牛家</string>
    <string name="app_id">58525166</string>
    <string name="message">消息</string>
    <string name="question">提问</string>
    <string name="account">我</string>
    <string name="click_once_more_exit">再按一次退出</string>
    <string name="resend">重新发送</string>
    <string name="main_tab_home">首页</string>
    <string name="consult_title">约谈顾问</string>
    <string name="loading">加载中...</string>
    <string name="question_title">提问</string>
    <string name="submit">提交</string>
    <string name="entrepreneurship_guide">创业指导</string>
    <string name="input_question_desc">请尽可能说明具体问题，并对问题的背景有所介绍，让专家能够快速理解您的问题</string>
    <string name="input_require_desc">说明您对于顾问的明确要求，并介绍公司或者项目的需求背景</string>
    <string name="account_title">我</string>
    <string name="account_balance">当前余额</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_question">我的提问</string>
    <string name="care_field">关注领域</string>
    <string name="store">收藏</string>
    <string name="consult_order">约谈订单</string>
    <string name="be_consultant">成为顾问</string>
    <string name="recharge">充值</string>
    <string name="deposit">提现</string>
    <string name="income_expenses_detail">余额明细</string>
    <string name="account_recharge">账户充值</string>
    <string name="money">金额</string>
    <string name="input_money">输入金额</string>
    <string name="all">全部</string>
    <string name="unfinished">未完成</string>
    <string name="finished">已完成</string>
    <string name="order_detail">订单详情</string>
    <string name="total">共：</string>
    <string name="q_a_mana">问答整理</string>
    <string name="personal_main_page">个人主页</string>
    <string name="my_order">我的订单</string>
    <string name="consult_service">约谈服务</string>
    <string name="user_name">用户名：</string>
    <string name="edit">编辑</string>
    <string name="add_q_a">添加问答</string>
    <string name="input_q_a_title">请输入问题标题...</string>
    <string name="input_q_a_content">请输入问题内容...</string>
    <string name="edit_q_a">编辑问答</string>
    <string name="e_person_profile">个人简介</string>
    <string name="buy_qa">已购买的回答</string>
    <string name="open">开启</string>
    <string name="user_comments">用户评价</string>
    <string name="consult_record">约谈记录</string>
    <string name="rmb_by_cnt">￥%s/次</string>
    <string name="rmb_by_minute">￥%s/分钟</string>
    <string name="rmb_by_hour">￥%s/小时</string>
    <string name="username">手机号/用户名</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="normal_user">普通用户</string>
    <string name="login_failed">登录失败</string>
    <string name="login_illeagal">用户名或密码不能为空</string>
    <string name="user_register">用户注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="third_login">使用社交账号登录</string>
    <string name="input_phone_no">请输入手机号</string>
    <string name="phone_format_error">手机号格式不正确</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="resend_ver_code">重发验证码</string>
    <string name="input_ver_code">输入验证码</string>
    <string name="wrong_no">手机号或验证不能为空</string>
    <string name="next">下一步</string>
    <string name="agree">同意</string>
    <string name="dnj_disclaimer">大牛家服务协议</string>
    <string name="input_pwd">密码</string>
    <string name="pwd_not_same">两次输入密码不一致</string>
    <string name="finish_register">完成</string>
    <string name="unsolved">待解决</string>
    <string name="satisfied">已满意</string>
    <string name="willing_to_answer">愿意回答</string>
    <string name="satisfied_answers">满意回答</string>
    <string name="instry_belong">所属行业：%s</string>
    <string name="cmp_scale">公司规模：%s</string>
    <string name="answer">接听</string>
    <string name="good_experts">好评专家</string>
    <string name="serve_experts">服务专家</string>
    <string name="tag_answer">答</string>
    <string name="unissued">未发布</string>
    <string name="issued">已发布</string>
    <string name="input_title">请输入标题</string>
    <string name="input_ques_des">请输入问题描述</string>
    <string name="answer_summary">答案概要(可选 ,30字以内)</string>
    <string name="input_answer">请输入答案</string>
    <string name="qa_charge">查看费用：</string>
    <string name="qa_charge_unit">元</string>
    <string name="qa_issue">发   布</string>
    <string name="input_expert_name">输入姓名或关键字查找</string>
    <string name="input_keywords">输入关键字</string>
    <string name="cancel">取消</string>
    <string name="all_kinds">全部分类</string>
    <string name="all_industry">所有行业</string>
    <string name="latest_choose">最近选择</string>
    <string name="clear_records">清空搜索记录</string>
    <string name="hint_expert_search">输入姓名或者行业名称、关键字搜索专家</string>
    <string name="hot_label">热门搜索</string>
    <string name="recent_search">最近搜索</string>
    <string name="no_history_record">暂时没有搜索记录</string>
    <string name="search_expert_position">输入行业、专长或其他关键字</string>
    <string name="sort">分类</string>
    <string name="define">定义</string>
    <string name="core_points">核心要点</string>
    <string name="operate_advice">操作建议</string>
    <string name="think_about_points_below">需要考虑以下几点：</string>
    <string name="relative_quesitons">相关问题</string>
    <string name="come_from">来源：</string>
    <string name="quizzer">提问者：</string>
    <string name="helpful">有帮助</string>
    <string name="unknown">未知</string>
    <string name="suggestion">意见</string>
    <string name="input_some_suggestion">写几句宝贵的提议吧...</string>
    <string name="consult_detail">约谈详情</string>
    <string name="answerer">回答者：</string>
    <string name="link">链接</string>
    <string name="person_home_page">个人主页</string>
    <string name="serve">服务：</string>
    <string name="mobile_consult_time">电话约谈：</string>
    <string name="hour">%s小时</string>
    <string name="count">%s次</string>
    <string name="profile">资料</string>
    <string name="questions_and_answers">问答</string>
    <string name="graphics_consult">图文约谈</string>
    <string name="offline_consult">线下约谈</string>
    <string name="network_chat">网络通话</string>
    <string name="consult_no_service">服务暂停,稍后开通</string>
    <string name="consult_field">约谈方向</string>
    <string name="person_bg">个人背景</string>
    <string name="work_experience">工作经历</string>
    <string name="edu_background">教育背景</string>
    <string name="per_count">元/次</string>
    <string name="per_hour">%s元/小时</string>
    <string name="per_minute">%s元/分钟</string>
    <string name="per_count_rmb">%s/次</string>
    <string name="per_hour_rmb">%s/时</string>
    <string name="per_minute_rmb">%s/分钟</string>
    <string name="bachelor">学士</string>
    <string name="master">硕士</string>
    <string name="phd">博士</string>
    <string name="other">其他</string>
    <string name="per_cnt">/次</string>
    <string name="per_h">/小时</string>
    <string name="per_m">/分钟</string>
    <string name="per_price">￥%s</string>
    <string name="user_comment">用户评价 (%s)</string>
    <string name="serve_cnt">服务次数：%s</string>
    <string name="average">平均：%s</string>
    <string name="input_consult_content">写明你要约谈的内容</string>
    <string name="buy">购买</string>
    <string name="buy_graphic_consult">购买图文约谈</string>
    <string name="buy_net_consult">购买网络通话</string>
    <string name="buy_offline_consult">购买线下约谈</string>
    <string name="network_chat_note">注：每次约谈时间至少10分钟，不足10分钟按10分钟计算。</string>
    <string name="setting">设置</string>
    <string name="change_pwd">更改密码</string>
    <string name="version">版本</string>
    <string name="secret_policy">隐私相关</string>
    <string name="user_agreement">用户协议</string>
    <string name="logout">退出登录</string>
    <string name="person_profile">个人资料</string>
    <string name="name">姓名</string>
    <string name="input_real_name">填写真实姓名</string>
    <string name="belong_company">所在公司</string>
    <string name="input_current_cmp">目前公司</string>
    <string name="position">职位</string>
    <string name="input_current_position">目前职位</string>
    <string name="profession">行业</string>
    <string name="scale">规模</string>
    <string name="optional_info">可选填信息</string>
    <string name="birthday">出生日期</string>
    <string name="gender">性别</string>
    <string name="not_filled">未填写</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="industry_choose">行业选择</string>
    <string name="company_scale">公司规模</string>
    <string name="address">地点</string>
    <string name="confirm">确定</string>
    <string name="closed">已关闭</string>
    <string name="concern_field">关注领域</string>
    <string name="add_field">添加领域</string>
    <string name="choose_care_fields">选择关注领域</string>
    <string name="save">保存</string>
    <string name="favor_consultant">约谈顾问</string>
    <string name="favor_knowledge">知识</string>
    <string name="photo_not_null">请选择头像</string>
    <string name="name_not_null">请填写姓名</string>
    <string name="cmpName_not_null">请填写公司名称</string>
    <string name="position_not_null">请填写当前职位</string>
    <string name="choose_industry">请选择所属行业</string>
    <string name="choose_scale">请选择公司规模</string>
    <string name="choose_posi">请选择所在地点</string>
    <string name="profile_not_null">请填写个人简介</string>
    <string name="consultant_require">顾问要求</string>
    <string name="how_to_link">如何连接</string>
    <string name="about_fee">关于付费</string>
    <string name="apply_step">申请步骤</string>
    <string name="real_name">真实姓名</string>
    <string name="cmp_name">公司名称</string>
    <string name="e_profile">简介</string>
    <string name="complete_profile">资料完善</string>
    <string name="personal_experiences">个人的职业经历以及专业发展</string>
    <string name="my_consult_field_num_notify">我的约谈方向数量：</string>
    <string name="my_consult_field_total_num">/3</string>
    <string name="add_consult_field">添加方向</string>
    <string name="consult_serve_type">约谈服务设置</string>
    <string name="choose_your_field">选择你的专长</string>
    <string name="input_experences">填写经验</string>
    <string name="input_experence_detail">请说明您在这方面的经验</string>
    <string name="apply_success">申请成功</string>
    <string name="apply_success_notify">已收到您提交的信息和认证资料,我们会在两个工作日内与您电话联系确认！</string>
    <string name="contact_time">联系您的时间</string>
    <string name="delete">删除</string>
    <string name="add_consult_field_first">成为顾问，至少需要添加一个约谈方向</string>
    <string name="already_reach_most_fields">每位专家最多能添加3个约谈方向</string>
    <string name="adjustment">调整</string>
    <string name="graphic_consult_detail">利用应用的即时通信功能，发送图片和文字等内容来解决用户问题。</string>
    <string name="net_chat_consult_detail">利用回拨电话的功能，让专家和用户可以通话，且不显示彼此号码*每次通话至少10分钟，不足10分钟按10分钟计算*</string>
    <string name="offline_consult_detail">用户和专家在线上商议好见面时间和地点，专家通过面谈的方式解决用户的问题。</string>
    <string name="service_type">服务类别：</string>
    <string name="fee">费用</string>
    <string name="rmb_per_count">（元/次）</string>
    <string name="rmb_per_minute">（元/分钟）</string>
    <string name="rmb_per_hour">（元/小时）</string>
    <string name="x_rmb_per_count">￥%s/次</string>
    <string name="x_rmb_per_minute">￥%s/分钟</string>
    <string name="x_rmb_per_hour">￥%s/小时</string>
    <string name="price">价格</string>
    <string name="pay_success">支付成功</string>
    <string name="edit_profile">简介编辑</string>
    <string name="input_profile">给自己俸细微的介绍吧</string>
    <string name="edu_detail">教育背景详情</string>
    <string name="work_detail">工作详情</string>
    <string name="input_cmp_name">请输入公司全称</string>
    <string name="input_position">所在公司职位</string>
    <string name="choose_avatar">选择头像</string>
    <string name="choose_from_album">从相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="phone_consult">电话约谈</string>
    <string name="register_phone_num">注册的手机号码</string>
    <string name="msg_verify_code">验证码</string>
    <string name="password_rule">密码长度要6-14位</string>
    <string name="new_password">新密码</string>
    <string name="new_password_confirm">确认新密码</string>
    <string name="complete">完&#160;&#160;&#160;成</string>
    <string name="old_password">旧密码</string>
    <string name="change_pwd_tip">您是通过第三方账号登录，还未设置密码</string>
    <string name="your_phone">您的手机号：</string>
</resources>