<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_cocolr"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_common_title_bar" />

    <EditText
        android:id="@+id/et_reset_way"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical"
        android:hint="@string/register_phone_num"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColorHint="@color/light_grey"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/login_bg"
            android:gravity="center_vertical"
            android:hint="@string/msg_verify_code"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="@color/light_grey"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_get_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_blue_btn"
            android:text="@string/get_ver_code"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/password_rule"
        android:textColor="@color/first_text_color"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColorHint="@color/light_grey"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_new_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical"
        android:hint="@string/new_password_confirm"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColorHint="@color/light_grey"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_blue_btn"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>