<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_content_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical" >

        <Button
            android:id="@+id/male"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/male"
            android:textColor="@color/first_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:src="@color/separate"
            android:contentDescription="@string/app_name"/>

        <Button
            android:id="@+id/female"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/female"
            android:textColor="@color/first_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/theme_blue"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>