<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_content_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_common_title_bar" />

    <include layout="@layout/common_line"/>

    <LinearLayout
        android:id="@+id/ll_change_pwd_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/user_name"
            android:textColor="@color/second_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_change_pwd_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/blue_text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_change_pwd_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/your_phone"
            android:textColor="@color/second_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_change_pwd_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/blue_text"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_change_pwd_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/change_pwd_tip"
        android:textColor="@color/second_text_color"
        android:textSize="16sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_common_grey_border">

        <EditText
            android:id="@+id/old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@color/transparent"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="@color/third_text_color"
            android:visibility="gone"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:src="@color/separate"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@color/transparent"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="@color/third_text_color"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:src="@color/separate"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/re_pwd"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@color/transparent"
            android:hint="@string/new_password_confirm"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColorHint="@color/third_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_complete"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/selector_blue_btn"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>