<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_content_bg"
    android:orientation="vertical">

    <include layout="@layout/common_top_bar" />

    <include layout="@layout/common_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_common_grey_border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/id_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/id_get_verify_code"
                android:background="@android:color/transparent"
                android:hint="@string/register_phone_num"
                android:inputType="phone"
                android:textColor="@color/first_text_color"
                android:textColorHint="@color/third_text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/id_get_verify_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_common_grey_solid"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/get_ver_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@color/separate" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/id_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/msg_verify_code"
                android:textColor="@color/first_text_color"
                android:textColorHint="@color/third_text_color"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/password_rule"
        android:textColor="@color/first_text_color"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_common_grey_border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/id_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/first_text_color"
                android:textColorHint="@color/third_text_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@color/separate" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/id_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/new_password_confirm"
                android:inputType="textPassword"
                android:textColor="@color/first_text_color"
                android:textColorHint="@color/third_text_color"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/id_complete"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_rect_blue"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>