<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_white_rect_round"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/choose_avatar"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <Button
            android:id="@+id/choose_from_album"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_white_grey"
            android:padding="10dp"
            android:text="@string/choose_from_album"
            android:textColor="@color/theme_blue"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_dlg_shape_rect_round_bottom"
            android:padding="10dp"
            android:text="@string/take_photo"
            android:textColor="@color/theme_blue"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_white_rect_round"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/dlg_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_dlg_shape_rect_round"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/theme_blue"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>